--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js",
+    "build": "webpack --mode=production",
+    "dev": "concurrently \"cross-env --mode=development webpack-dev-server --hot --color\" \"nodemon ./server/server.js\""
   },
   "repository": {
     "type": "git",
