--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel": "^6.23.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "concurrently": "^7.3.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "path": "^0.12.7",
@@ -39,6 +40,7 @@
     "@babel/runtime": "^7.18.9",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.19",
