--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
-    "build": "webpack --mode=production",
+    "build": "webpack --mode=production & npm run start",
     "dev": "concurrently \"cross-env --mode=development webpack-dev-server --hot --color\" \"nodemon ./server/server.js\""
   },
   "repository": {
