frontend updated modal and logout

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js",
-    "build": "webpack --mode=production & npm run start",
+    "start": "--mode=production nodemon server/server.js",
+    "build": "webpack",
     "dev": "concurrently \"cross-env --mode=development webpack-dev-server --hot --color\" \"nodemon ./server/server.js\""
   },
   "repository": {
